--- a/tools/submit_case.html
+++ b/tools/submit_case.html
@@ -10,10 +10,10 @@
   <p>請將下列格式貼入，按下按鈕即可送出所有案例：</p>
   <textarea id="json_input" rows="20" cols="100">[
   {
-    "filename": "case_tokyo_elderly.json",
+    "filename": ".json",
     "content": {
-      "case_id": "case_tokyo_elderly",
-      "project_name": "Tokyo Elderly Home",
+      "case_id": "",
+      "project_name": "",
       "data_sources": ["GPT Analysis"],
       "Gene_A": {},
       "Gene_B": {},
