--- a/tools/submit_case.html
+++ b/tools/submit_case.html
@@ -42,7 +42,8 @@
         }
 
         cases.forEach(data => {
-          fetch("https://precedent-dna-webhook.yunjen20030303.repl.co/push_case", {
+          fetch("https://ac907e17-3c44-4b93-bc13-bbbcc4afb4a5-00-2wk9a5dxu9yqb.pike.replit.dev/push_case", {
+                , {
             method: "POST",
             headers: {
               "Content-Type": "application/json"
